templates/kubernetes-templates/Kubernetes-templates/network-policy.yaml
#
#  Author: KhulnaSoft Ltd
#  Date: 2019-11-28 18:23:03 +0000 (Thu, 28 Nov 2019)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/KhulnaSoft/Kubernetes-configs
#
#  License: see accompanying KhulnaSoft Ltd LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/company/khulnasoft
#

# ============================================================================ #
#                           N e t w o r k P o l i c y
# ============================================================================ #

# https://kubernetes.io/docs/concepts/services-networking/network-policies/

# https://github.com/ahmetb/kubernetes-network-policy-recipes

# https://kubernetes.io/docs/reference/kubernetes-api/policy-resources/network-policy-v1/

# allow incoming to APP-backend pods only from APP-frontend

---
#apiVersion: extensions/v1beta1   # Kubernetes 1.4 - 1.6
apiVersion: networking.k8s.io/v1  # Kubernetes 1.7+
kind: NetworkPolicy
metadata:
  name: permit-frontend-pods-by-label
  namespace: NAMESPACE
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app: APP-backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: APP-frontend
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permit-from-namespace
  namespace: NAMESPACE
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ingress-nginx
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              project: myothernamespace
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permit-from-IP
  namespace: NAMESPACE
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ingress-nginx
  ingress:
    - from:
        - ipBlock:
            cidr: x.x.x.x/16
            except:
              - x.x.x.x/24
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: outbound-dns-only
  namespace: NAMESPACE
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: locked-down-app
  egress:
    - ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
